# OneAIChat

./: .env.template  .gitignore  next.config.mjs  package-lock.json  package.json  tsconfig.json
app/: constant.ts  utils.ts
app/api/: auth.ts  bedrock.ts
app/api/[provider]/[...path]/: route.ts
app/client/: api.ts
app/components/: settings.tsx
app/config/: server.ts
app/locales/: cn.ts  en.ts
app/store/: access.ts  config.ts
flutter_app/: README.md  flutter_launcher_icons.yaml  pubspec.yaml
flutter_app/android/app/: build.gradle
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/java/host/oneai/chat/: MainActivity.java
flutter_app/android/app/src/main/kotlin/host/oneai/flutter_app/: MainActivity.kt
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/linux/: CMakeLists.txt  my_application.cc
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
flutter_app/test/: widget_test.dart
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  main.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs  stream.rs
