[package]
name = "oneai-chat-app"
version = "1.0.0"
description = "A cross platform app for LLM ChatBot."
authors = ["Glay"]
license = "mit"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [
] }
tauri-plugin-window-state = { version = "2.0.0" }
tauri-plugin-notification = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-http = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "oneai_chat_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0"
