[package]
name = "oneai-chat"
version = "0.1.0"
description = "A cross platform app for LLM ChatBot."
authors = ["OneAI"]
license = "mit"
repository = ""
default-run = "oneai-chat"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oneai_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
